syntax = "proto3";

package grpc_user;

message TokenRequest {
  string token = 1;
}

message UserRequest {
  int64 id = 1;
}

message User {
  int64 id = 1;
  string userid = 2;
  string name = 3;
  string email = 4;
  string phone_number = 5;
  string role = 6;
  bool status = 7;
  string password_digest = 8;
  bool enable_two_factors = 9;
}

message UserProfile {
  User user = 1;
  string user_type = 2;
  string account_type = 3;
  string id_number = 4;
  string id_issue_date = 5;
  string id_issue_location = 6;
  string tax_number = 7;
  string address = 8;
  string date_of_birth = 9;
  string company = 10;
  string rep_name = 11;
  string rep_phone = 12;
  string rep_email = 13;
  string ref_name = 14;
  string ref_phone = 15;
  string ref_email = 16;
}

message UserProfiles {
  repeated UserProfile user_profiles = 1;
}
